# DecisionTree

./: README.md  __init__.py  pyproject.toml
src/: DecisionTreeClassifier.py
