[project]
name = "dtree"
version = "0.1.0"
description = "A simple Decision tree made for learning"
authors = [
    {name = "Bhavy",email = "panchalbhavy84@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
